2015-02-17  Julien Bect  <julien.bect@supelec.fr>

	Initialize model.param with NaNs.

	* core/stk_model.m: Initialize model.param with NaNs.
	* core/stk_predict.m: Fix unit tests.
	* covfcs/stk_discretecov.m: Fix unit tests.
	* covfcs/stk_gausscov_aniso.m: Fix unit tests.
	* covfcs/stk_gausscov_iso.m: Fix unit tests.
	* covfcs/stk_materncov32_aniso.m: Fix unit tests.
	* covfcs/stk_materncov32_iso.m: Fix unit tests.
	* covfcs/stk_materncov52_aniso.m: Fix unit tests.
	* covfcs/stk_materncov52_iso.m: Fix unit tests.
	* covfcs/stk_materncov_aniso.m: Fix unit tests.
	* covfcs/stk_materncov_iso.m: Fix unit tests.
	* utils/stk_conditioning.m: Fix unit tests.
	* utils/stk_generate_samplepaths.m: Fix unit tests.

2015-02-11  Julien Bect  <julien.bect@supelec.fr>

	stk_feval.m: Accept any object that implement feval

	* arrays/generic/stk_feval.m: Accept any object that implement
	feval (not just strings and function handles).

2015-02-10  Julien Bect  <julien.bect@supelec.fr>

	stk_feval.m: Fix backward compatibility issues

	* arrays/generic/stk_feval.m: Fix backward compatibility
	issue. Old-style STK structures, where the data is contained in a
	field named 'a', were not dealt with properly. Add unit test.
	* core/stk_predict.m: Convert xi to double (same reason).
	* paramestim/stk_param_estim.m: Convert zi to double (same reason).
	* arrays/@struct/stk_length.m: New function.

2015-02-09  Julien Bect  <julien.bect@supelec.fr>

	stk_hrect.m: Provide default constructor

	* arrays/@stk_hrect/stk_hrect.m: Provide default constructor

2015-02-04  Julien Bect  <julien.bect@supelec.fr>

	Overload uplus, uminus for stk_dataframe objects.

	* arrays/@stk_dataframe/uminus.m: Overload uminus.
	* arrays/@stk_dataframe/uplus.m: Overload uplus.
	* arrays/@stk_factorialdesign/uminus.m: Overload uminus.

	stk_feval.m: Accept multivariate outputs (closes #20)

	* arrays/generic/stk_feval.m: Accept functions with multivariate
	outputs (i.e., outputs with several columns). Improve the